@@ -1,4 +1,5 @@
 channels:
+  - anaconda
   - conda-forge
   - bioconda
   - sagrudd
@@ -8,8 +9,14 @@ dependencies:
   - selenium
   - phantomjs
   - papermill
-  - python
-  - cython
+  - anaconda:python
+  - anaconda:cython
+  - anaconda:numpy
+  - anaconda:scipy 
+  - anaconda:scikit-learn
+  - anaconda:numexpr
+  - anaconda:mkl
+  - anaconda:spyder
   - pip
   - pip:
-    - megrim
+    --editable=git+https://github.com/sagrudd/megrim.git#egg=megrim
