@@ -11,20 +11,16 @@ from IPython.display import Image
 from megrim.environment import tutorial_branding, Flounder
 from megrim.genome_geometry import BamHandler, BedHandler
 from megrim.reference_genome import ReferenceGenome, augment_annotation
+from megrim.reproducible_research import SessionInfo
 from importlib import reload
 import logging
 reload(logging)
 logging.basicConfig(
     format='%(asctime)s %(levelname)s:%(message)s',  
-    level=logging.DEBUG, datefmt='%I:%M:%S')
+    level=logging.INFO, datefmt='%I:%M:%S')
 
 
 tutorial_branding("Cas9", "Oxford Nanopore Tutorial: Cas9")
-
-
-# create an instance of flounder for path handling
-flounder = Flounder()
-flounder.set_path("/tmp/floundeR")
 
 target_proximity = 5000
 
@@ -52,15 +48,15 @@ bam = BamHandler("/Users/srudd/Desktop/cas9_FAK76554.bam")
 # bam.get_sam_annotation('1', 155179779, 155195266)
 
 # create a tiled_genome_representation of coverage
-tiled_coverage_means = ref.get_tiled_mean_coverage2(
-    bam, tile_size=1000)
+tiled_coverage_means = ref.get_tiled_mean_coverage(bam, tile_size=100)
 print(tiled_coverage_means)
 
 # prepare coverage update for the on_target ranges
-on_target_universe = ref.get_tiled_mean_coverage2(bam, ranges=on_target)
-target_proximal_universe = ref.get_tiled_mean_coverage2(
+on_target_universe = ref.get_tiled_mean_coverage(bam, ranges=on_target)
+on_target_universe.Name = on_target.Name
+target_proximal_universe = ref.get_tiled_mean_coverage(
     bam, ranges=target_proximal)
-print(target_proximal_universe.MeanCoverage)
+print(target_proximal_universe)
 
 # look for the off-target regions of the genome
 off_target_scale = 20
@@ -69,10 +65,14 @@ off_target_scale = 20
 # to filter out the regions of the genome that are on_target ...
 filtered_coverage = tiled_coverage_means.subtract(on_target_universe)
 background_threshold = filtered_coverage.MeanCoverage.mean() * off_target_scale
-off_target_universe = ref.get_tiled_mean_coverage2(bam, ranges=filtered_coverage[
+off_target_universe = ref.get_tiled_mean_coverage(bam, ranges=filtered_coverage[
     filtered_coverage.MeanCoverage >= background_threshold].slack(10).merge().slack(-10))
 background_universe = ref.get_tiled_mean_coverage(bam, ranges=untargeted.subtract(off_target_universe))
 
-augment_annotation(bam, on_target_universe)
+on_target_universe = augment_annotation(bam, on_target_universe)
+off_target_universe = augment_annotation(bam, off_target_universe)
+background_universe = augment_annotation(bam, background_universe)
+target_proximal_universe = augment_annotation(bam, target_proximal_universe)
+aggregated_cov = ref.deep_dive(bam, on_target_universe, target_proximity=target_proximity)
 
-# ref.deep_dive(bam, on_target_universe, target_proximity=target_proximity)
+print(SessionInfo())
