@@ -20,7 +20,7 @@ setuptools.setup(
     install_requires=['datetime', 'pytz', 'progressbar', 'tqdm', 'ipython', 
                       'ipywidgets', 'matplotlib', 'pandas', 'numpy',
                       'pyranges', 'pysam', 'fontawesome', 'scipy', 
-                      'dask[complete]'],
+                      'dask[complete]', 'bamread'],
     classifiers=[
         "Programming Language :: Python :: 3",
         "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
